<resources>
    <string name="app_name">Travelpedia</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Register in Travelpedia</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="action_search">Search</string>
    <string name="dialog_ok">Search</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="addMembers">ADD MEMBERS</string>
    <string name="profile">PROFILE</string>
    <string name="feed">FEED</string>
    <string name="activity">ACTIVITY</string>
    <string name="settings">SETTINGS</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="title_activity_mytrips">My Trips</string>
    <string name="prompt_trip_name">Enter trip Name</string>
    <string name="prompt_city_name">Select City</string>
    <string name="prompt_start_date">Select Trip Date</string>
    <string name="prompt_add_trip">Add trip</string>
    <string name="prompt_friend_name">Enter friend name</string>
    <string name="prompt_add_friend">Add New friend</string>
    <string name="title_activity_upcoming_trips">Upcoming Trips</string>
    <string name="title_activity_review">Reviews</string>


    <string-array name="place_type_name">
        <item>Airport</item>
        <item>Amusement Park</item>
        <item>ATM</item>
        <item>Bank</item>
        <item>Bus Station</item>
        <item>Church</item>
        <item>Doctor</item>
        <item>Hospital</item>
        <item>Mosque</item>
        <item>Movie Theater</item>
        <item>Hindu Temple</item>
        <item>Restaurant</item>
        <item>School</item>
    </string-array>
    <string name="str_btn_find">Find</string>
    <string name="str_tv_address">Address</string>

    <string-array name="place_type">
        <item>airport</item>
        <item>amusement_park</item>
        <item>atm</item>
        <item>bank</item>
        <item>bus_station</item>
        <item>church</item>
        <item>doctor</item>
        <item>hospital</item>
        <item>mosque</item>
        <item>movie_theater</item>
        <item>hindu_temple</item>
        <item>restaurant</item>
        <item>school</item>
    </string-array>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_plan_trip">Plan Trip</string>

</resources>
